<resources
    xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:ifEmpty="drop">NeatLauncher</string>
    <string name="package_n_version">Package &amp; Version</string>
    <string name="package_version_code">%s v%s (version code %d)</string>
    <string name="author_name">Author: %s</string>
    <string name="license_name">Licence: %s</string>
    <string name="source_link">Source code: %s</string>
    <string name="package_link">App repository: %s</string>
    <string name="xlat_title">Translation</string>
    <string name="license_other">Other Licences</string>
    <string name="font_ubuntu">Ubuntu Font</string>
    <string name="service_open_meteo">Open-Meteo Service</string>
    <string name="open_meteo_link">Weather data by Open-Meteo.com</string>
    <string name="readme_short_description">
    A neat and convenient launcher without icons.
    </string>
    <string name="readme_description">Description</string>
    <string name="readme_full_description">
    The home app (the launcher) to replace ugly home apps that are too
    colourful, distracting, inefficient, and full of non-sensical
    icons.

    Clarity by efficient and elegant design based on text. With
    configurable quick access to apps, shortcuts, or contacts via a
    list or by gestures.

    Supports app shortcuts, both static and dynamic.

    Search function optionally integrates the contact list, and
    includes a configurable web search.

    Tries to have enough configurability without making testing corner
    cases tedious, to ensure functionality and robustness.

    Weather info (uses network and location services, if necessary).

    New app developed from scratch. Takes inspiration from Unlauncher
    (a fork of Slimlauncher), and Nolauncher, and also feedback of
    users.
    </string>
    <string name="readme_features">Features</string>
    <string name="readme_feature_list">
    - uniform and elegant text-based design
    - configurable quick access and gestures on home screen
    - shortcut support (long click on app by default)
    - hide/show apps (but keep searchable)
    - apps can be renamed and reordered
    - good search function for apps
    - integrated contact list search
    - integrated, configurable web search
    - clock options
    - date format options
    - weather forecast options (via open-meteo.com)
    - configurable colour scheme
    - can use system wallpaper as background
    - free open source software
    - no icon set support (no need: no icons at all)
    - no widget support
    </string>
    <string name="faq_text">
    Q: How to configure a thing?\n
    A: Try long clicking on it.\n
    \n
    Q: How to disable swipes or other actions?\n
    A: By pinning the ‘Nothing’ item to it.\n
    \n
    Q: How to set a search engine as default?\n
    A: Long click on search engine to configure it.\n
    \n
    Q: How to open keyboard immediately when drawer opens?\n
    A: Click on ‘Search’ field instead of swiping up to open the drawer.\n
    \n
    Q: How to make current weather location a permanent entry?\n
    A: Long click on ‘Current location’, then give it a name.\n
    \n
    Q: How to get notification dots next to app names?\n
    A: In the system settings: reception of notifications needs to be granted to
    NeatLauncher, and notification dots need to be enabled.\n
    \n
    Q: The screen does not update when scrolling!?\n
    A: In the ‘App Info’, switch ‘App Battery Usage’ to ‘Unrestricted’.
    (Battery drain seems unchanged.)\n
    </string>
    <string name="readme_screenshots">Screenshots</string>
    <string name="main_search_hint">Search</string>
    <string name="item_nothing">Nothing</string>
    <string name="item_photo">Photo</string>
    <string name="item_video">Video</string>
    <string name="item_home">Home</string>
    <string name="item_dial">Dial</string>
    <string name="item_camera">Camera</string>
    <string name="item_settings">Settings</string>
    <string name="item_phone">Phone</string>
    <string name="item_open_notifications">Open Notifications</string>
    <string name="open_notifications_failed">Failed to open notifications</string>
    <string name="item_start">Start</string>
    <string name="item_info">App Info</string>
    <string name="item_rename">Rename</string>
    <string name="item_pin">Pin</string>
    <string name="item_rid">Unpin</string>
    <string name="item_hide">Hide</string>
    <string name="item_show">Unhide</string>
    <string name="item_remove">Remove</string>
    <string name="item_title_shortcuts">Shortcuts</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="rename_title">Rename</string>
    <string name="edit_order_title">Sort like</string>
    <string name="edit_order_hint">label</string>
    <string name="pin_heading">Pin to Home</string>
    <string name="pin_home">List</string>
    <string name="pin_left">Swipe Left</string>
    <string name="pin_right">Swipe Right</string>
    <string name="pin_down">Swipe Down</string>
    <string name="pin_up">Swipe Up</string>
    <string name="pin_bgrd">Long Click Background</string>
    <string name="pin_time">Click Time</string>
    <string name="pin_date">Click Date</string>
    <string name="pin_weath">Click Weather</string>
    <string name="error_starting">Error starting %s</string>
    <string name="error_removing">Error removing %s</string>
    <string name="ok_remove_shortcut">%s: remove shortcut</string>
    <string name="search_opt_title">Search Engine</string>
    <string name="search_name_hint">Name</string>
    <string name="search_url_hint">URL</string>
    <string name="search_make_default">Default search engine</string>
    <string name="search_keep">Keep</string>
    <string name="search_copy">Make New</string>
    <string name="search_delete">Delete</string>
    <string name="main_opt_title">Settings</string>
    <string name="about_title">About NeatLauncher</string>
    <string name="save_restore">Save / Restore Preferences</string>
    <string name="pref_save">Save Preferences</string>
    <string name="pref_load">Load Preferences</string>
    <string name="ok_load">Loading complete.</string>
    <string name="err_load">Loading failed.</string>
    <string name="ok_save">Saving complete.</string>
    <string name="err_save">Saving failed.</string>
    <string name="main_faq">FAQ / Help</string>
    <string name="main_language">Language</string>
    <string name="main_info">App Info</string>
    <string name="do_hide">%s: hide (still shown in search)</string>
    <string name="do_show">%s: show</string>
    <string name="do_unpin">%s: unpin</string>
    <string name="weather_title">Weather</string>
    <string name="no_weather">No weather</string>
    <string name="current_location">Current location</string>
    <string name="search_location_hint">Search for new location</string>
    <string name="search_location_title">Search Location</string>
    <string name="geo_link">Show on Map</string>
    <string name="error_msg">Error: %s</string>
    <string name="searching_msg">Searching...</string>
    <string name="search_empty">Nothing was found.</string>
    <string name="switched_to_location">Weather location is %s</string>
    <string name="switched_to_current_location">Weather location is here</string>
    <string name="switched_off_weather">Weather is off</string>
    <string name="location_title">Location Settings</string>
    <string name="loc_cur_title">Current Location</string>
    <string name="wstart_choice_title">First Day of Week</string>
    <string name="tweath_choice_title">Forecast Choice</string>
    <string-array name="tweath_choice">
        <item>Tabular week</item>
        <item>Rain on analog clock</item>
        <item>Both</item>
    </string-array>
    <string name="temp_choice_title">Temperature Unit</string>
    <string-array name="temp_choice" tools:ifEmpty="drop">
        <item>K</item>
        <item>°C</item>
        <item>°F</item>
    </string-array>
    <string name="ttype_choice_title">Temperature Measure</string>
    <string-array name="ttype_choice">
        <item>actual</item>
        <item>apparent</item>
    </string-array>
    <string name="coord_title">Coordinates</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string-array name="weather_code">
        <item>clouds</item>
        <item>fog</item>
        <item>drizzle</item>
        <item>rain</item>
        <item>snow</item>
        <item>thunderstorm</item>
    </string-array>
    <string-array name="weather_level">
        <item>none</item>
        <item>light</item>
        <item>moderate</item>
        <item>heavy</item>
    </string-array>
    <string name="weather_icy">freezing</string>
    <string name="weather_shower">shower</string>
    <string-array name="weather_code_descr">
        <item>0; clear sky</item>
        <item>1; mainly clear</item>
        <item>2; partly cloudy</item>
        <item>3; overcast</item>
        <item>45; fog</item>
        <item>48; depositing rime fog</item>
        <item>51; drizzle, light</item>
        <item>53; drizzle, moderate</item>
        <item>55; drizzle, dense</item>
        <item>56; freezing drizzle, light</item>
        <item>57; freezing drizzle, dense</item>
        <item>61; rain, slight</item>
        <item>63; rain, moderate</item>
        <item>65; rain, heavy</item>
        <item>66; freezing rain, light</item>
        <item>67; freezing rain, heavy</item>
        <item>71; snow fall, slight</item>
        <item>73; snow fall, moderate</item>
        <item>75; snow fall, heavy</item>
        <item>77; snow grains</item>
        <item>80; rain showers, slight</item>
        <item>81; rain showers, moderate</item>
        <item>82; rain showers, violent</item>
        <item>85; snow showers, slight</item>
        <item>86; snow showers, heavy</item>
        <item>95; thunderstorm</item>
        <item>96; thunderstorm with hail</item>
        <item>99; heavy thunderstorm with hail</item>
    </string-array>
    <string name="weather_symbol_title">Weather Symbols</string>
    <string name="location_no_perm">No permission to access location</string>
    <string name="notif_no_perm">No permission to receive notifications</string>
    <string name="notifications_title">Notifications</string>
    <string name="notif_dots_title">Notification Dots</string>
    <string name="notif_dots_intro">
        To show notification dots on app names, NeatLauncher needs permission
        to receive notifications (currently %s).  Further, notification dots need to
        be enabled in the system settings, typically in ‘Notifications | Notification
        Dot on App Icon’ (currently %s).
    </string>
    <string name="notif_start_perm">Notification permissions</string>
    <string name="notif_start_settings">System Settings</string>
    <string name="notif_grant0">denied</string>
    <string name="notif_grant1">granted</string>
    <string name="notif_dots0">disabled</string>
    <string name="notif_dots1">enabled</string>
    <string name="read_contacts_no_perm">No permission to read contact list</string>
    <string name="contact_choice_title">Contacts</string>
    <string-array name="contact_choice">
        <item>Do not read list</item>
        <item>Read list for searching</item>
    </string-array>
    <string name="date_choice_title">Date</string>
    <string-array name="date_choice">
        <item>System settings</item>
        <item>No date</item>
        <item>2024-01-01</item>
        <item>Mon 2024-01-01</item>
        <item>Monday</item>
    </string-array>
    <string name="time_choice_title">Time</string>
    <string name="color_choice_title">Colour</string>
    <string name="font_choice_title">Font</string>
    <string name="back_choice_title">Background</string>
</resources>