<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/popupLayoutPadding"
    android:orientation="vertical"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingVertical="@dimen/popupScrollPadding"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/back_choice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/back_choice_title"
                style="@style/AppTheme.PopupItem"
                />

            <TextView
                android:id="@+id/color_choice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/color_choice_title"
                style="@style/AppTheme.PopupItem"
                />

            <TextView
                android:id="@+id/font_choice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/font_choice_title"
                style="@style/AppTheme.PopupItem"
                />

            <TextView
                android:id="@+id/time_choice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/time_choice_title"
                style="@style/AppTheme.PopupItem"
                />

            <TextView
                android:id="@+id/date_choice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date_choice_title"
                style="@style/AppTheme.PopupItem"
                />

            <TextView
                android:id="@+id/contact_choice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contact_choice_title"
                style="@style/AppTheme.PopupItem"
                />

            <TextView
                android:id="@+id/weather_menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/weather_title"
                style="@style/AppTheme.PopupItem"
                />

            <TextView
                android:id="@+id/language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_language"
                style="@style/AppTheme.PopupItem"
                />

            <TextView
                android:id="@+id/main_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_info"
                style="@style/AppTheme.PopupItem"
                />

            <TextView
                android:id="@+id/main_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_about"
                style="@style/AppTheme.PopupItem"
                />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
