<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/popupLayoutPadding"
    android:orientation="vertical"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingVertical="@dimen/popupScrollPadding"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <RadioGroup
                android:id="@+id/location_choice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/AppTheme.PopupItem"
                >
                <RadioButton
                    android:id="@+id/no_weather"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/no_weather"
                    style="@style/AppTheme.PopupSwitch"
                    />
                <RadioButton
                    android:id="@+id/current_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/current_location"
                    style="@style/AppTheme.PopupSwitch"
                    />
            </RadioGroup>

            <EditText
                android:id="@+id/new_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/search_location_hint"
                android:imeOptions="actionDone"
                android:inputType="none|textNoSuggestions|textCapWords"
                android:lines="1"
                android:ems="10"
                style="@style/AppTheme.PopupItem"
                tools:ignore="Autofill,LabelFor"
                />

            <TextView
                android:id="@+id/symbols"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/weather_symbol_title"
                style="@style/AppTheme.PopupItem"
                />

            <TextView
                android:id="@+id/weather_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tweath_choice_title"
                style="@style/AppTheme.PopupItem"
                />

            <TextView
                android:id="@+id/week_start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wstart_choice_title"
                style="@style/AppTheme.PopupItem"
                />

            <TextView
                android:id="@+id/ttype_choice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ttype_choice_title"
                style="@style/AppTheme.PopupItem"
                />

            <TextView
                android:id="@+id/temp_choice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/temp_choice_title"
                style="@style/AppTheme.PopupItem"
                />

            <TextView
                android:id="@+id/o_meteo_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/open_meteo_link"
                style="@style/AppTheme.PopupAction"
                />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
