<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/popupLayoutPadding"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <EditText
            android:id="@+id/edit_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="none|textNoSuggestions|textCapWords"
            android:lines="1"
            android:ems="10"
            style="@style/AppTheme.PopupItem"
            tools:ignore="Autofill,LabelFor"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_order_title"
            style="@style/AppTheme.PopupHeading"
            />

        <EditText
            android:id="@+id/edit_order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_order_hint"
            android:imeOptions="actionDone"
            android:inputType="none|textNoSuggestions|textCapWords"
            android:lines="1"
            android:ems="10"
            style="@style/AppTheme.PopupItem"
            tools:ignore="Autofill,LabelFor"
            />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <!-- Despite unused, this needs an :id, otherwise the RadioGroup ignores it -->
            <RadioButton
                android:id="@+id/edit_keep"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/search_keep"
                style="@style/AppTheme.PopupSwitch"
                />

            <RadioButton
                android:id="@+id/edit_del"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/search_delete"
                style="@style/AppTheme.PopupSwitch"
                />
        </RadioGroup>

        <TextView
            android:id="@+id/geo_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/geo_link"
            style="@style/AppTheme.PopupAction"
            />
    </LinearLayout>
</FrameLayout>
